kustomize-guestbook/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/instance: guestbook
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
        - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
          name: guestbook-ui
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /var/www/html/
      volumes:
        - name: config-volume
          configMap:
            name: kustomize-guestbook-cm
            items:
              - key: index2.html
                path: index2.html
