kustomize-guestbook/safari-dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: safari
    app.kubernetes.io/name: safari
    app.kubernetes.io/instance: safari
    resize: v1
  name: safari
spec:
  replicas: 1
  selector:
    matchLabels:
      app: safari
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: safari
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: safari-pvc-dp
      containers:
        - image: httpd:2.4.41-alpine
          name: container
          volumeMounts: 
            - name: data
              mountPath: /tmp/safari-data
