kustomize-guestbook/safari-sf.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    app: safari
    app.kubernetes.io/name: safari
    app.kubernetes.io/instance: safari
    resize: v1
  name: safari
spec:
  replicas: 1
  selector:
    matchLabels:
      app: safari
  serviceName: "safari-svc"
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: safari
    spec:
      containers:
        - image: httpd:2.4.41-alpine
          name: container
          volumeMounts:
            - name: data
              mountPath: /tmp/safari-data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: safari-pvc-st
