kustomize-guestbook/safari-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: safari
    app.kubernetes.io/instance: safari
  name: safari-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: safari
