kustomize-guestbook/safari-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: safari
    app.kubernetes.io/instance: safari
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: safari-ing
spec:
  rules:
  - host: safari.foo.bar
    http:
      paths:
      - backend:
          service:
            name: safari-svc
            port:
              number: 80
        pathType: ImplementationSpecific
